--- a/krit/main.css
+++ b/krit/main.css
@@ -12,11 +12,14 @@ body{
 
 a{
     text-decoration: none;
+    color: #cdcdfe;
 }
 
-.long{
-    height: 5000px;
-}
+
+
+
+
+
 
 /*INTRO*/
 
@@ -64,6 +67,11 @@ a{
     background-size: cover;
 }
 
+
+
+
+
+
 /*WRAPPER*/
 
 .wrapper_intro{
@@ -77,7 +85,7 @@ a{
     display: block;
     width: 500px;
     height: 7px;
-    background-color: floralwhite;
+    background-color: #eff3f8;
     margin: 0 auto;
     margin-top: 100px;
     border-radius: 10px;
@@ -139,7 +147,7 @@ a{
 .card .info{
     position: relative;
     z-index: 3;
-    color: white;
+    color: #eff3f8;
     opacity: 0;
     transform: translateY(30px);
     transition: 0.5s all;
@@ -159,3 +167,89 @@ a{
     font-size: 14px;
     font-weight: 400;
 }
+
+
+
+
+
+
+/*MINI CRADS*/
+
+.mini_cards_section_intro{
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.mini_cards_section_intro::after{
+    content: "";
+    display: block;
+    width: 500px;
+    height: 7px;
+    background-color: #eff3f8;
+    margin: 0 auto;
+    margin-top: 100px;
+    border-radius: 10px;
+}
+
+.mini_cards_section{
+    margin: 100px;
+}
+
+.mini_card{
+    background-color: #25272b;
+    width: 100%;
+    height: 200px;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 50px;
+    display: flex;
+}
+
+.mini_card img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    border-radius: 30px;
+}
+
+.mini_card h1{
+    color: #eff3f8;
+    font-size: 35px;
+    text-wrap: balance;
+    margin: 0 90px 25px;
+}
+
+.mini_card p{
+    color: #eff3f8;
+    font-size: 23px;
+    text-wrap: balance;
+    margin: 0 90px 0;
+}
+
+
+
+
+
+
+
+/*END*/
+
+.end{
+    background-color: #25272b;
+    width: 100%;
+    height: 300px;
+    color: #eff3f8;
+}
+
+.source{
+    padding: 50px;
+}
+.source h1{
+    margin: 0 0 10px 0;
+}
+.source a{
+    margin: 10px 0;
+}
+
